# SGDL2

./: Actor.cpp  CMakeLists.txt  Camera.cpp  Function.h  GameMap.cpp  Platform.h  README.md  SGDL2.h  Sprite.cpp  Vector2.cpp  Vector2.h
Animation/: Animation.cpp  Animation.h  Frame.h
Asset/: Asset.cpp  Asset.h  Sprite.cpp  Sprite.h
GameMap/: GameMap.cpp  GameMap.h  GameMode.h
GameObject/: Actor.cpp  Actor.h  Charactor.h
Graphics/: Camera.cpp  Camera.h  Scene.cpp  Scene.h  Window.cpp  Window.h
include/: BaseObject.h  GameMap.h  Scene.h  Sprite.h  Vector2.h
src/: BaseObject.cpp  Sence.cpp
src/include/: Actor.h  Camera.h
